trying to fix mobile alignment 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2231,7 +2231,7 @@
 			padding: 0;
 		}
 
- Icon 
+ /*Icon*/ 
 
 	.icon {
 		text-decoration: none;
@@ -2242,7 +2242,7 @@
 		.icon:before {
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
-			/*font-size: 5em;*/
+			font-size: 5em;
 			line-height: 1em;
 			font-family: FontAwesome;
 			font-style: normal;
